// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentHomePageComponent should snap when courses are still loading 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading={[Function Boolean]}
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap when there is course loading failed 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed={[Function Boolean]}
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load courses
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry
      </button>
    </div>
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with all feedback sessions over 2 courses 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <div />
    <div>
      <div
        class="row mb-2"
      >
        <div
          class="col-12"
        >
          <div
            class="float-end"
          >
            <strong
              class="d-inline"
            >
               Sort By: 
            </strong>
            <div
              class="btn-group"
            >
              <button
                class="btn btn-light"
                id="sort-course-id-btn"
              >
                Course ID
              </button>
              <button
                class="btn btn-light"
                id="sort-course-name-btn"
              >
                Course Name
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-primary text-white"
        >
          <strong
            class="text-break"
          >
            [CS1231]: Discrete Structures
          </strong>
          <div
            class="card-header-btn-toolbar"
          >
            <a
              class="btn btn-primary btn-sm button text-nowrap"
              href="/web/student/course?courseid=CS1231"
              id="view-team-btn-0"
              tmrouterlink="/web/student/course"
            >
               View team 
            </a>
          </div>
        </div>
        <tm-loading-retry>
          <div
            class="table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
            >
              <thead>
                <tr>
                  <th>
                    Session Name
                  </th>
                  <th>
                    Deadline
                  </th>
                  <th>
                    Submissions
                  </th>
                  <th>
                    Responses
                  </th>
                  <th>
                    Action(s)
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-break"
                  >
                    First Session
                  </td>
                  <td>
                    <span>
                       Sat, 02 Feb 2019, 04:15 PM +08 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Submitted 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Not Published 
                    </span>
                  </td>
                  <td>
                    <a
                      class="btn btn-light btn-sm btn-margin-right disabled"
                      href="/web/student/sessions/result?courseid=CS1231&fsname=First%20Session"
                      id="view-responses-btn-0"
                      tmrouterlink="/web/student/sessions/result"
                    >
                       View Responses 
                    </a>
                    <a
                      class="btn btn-light btn-sm"
                      href="/web/student/sessions/submission?courseid=CS1231&fsname=First%20Session"
                      id="edit-submit-btn-0"
                      tmrouterlink="/web/student/sessions/submission"
                    >
                       Edit Submission 
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-break"
                  >
                    Second Session
                  </td>
                  <td>
                    <span>
                       Sat, 02 Feb 2019, 04:15 PM +08 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Closed 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Not Published 
                    </span>
                  </td>
                  <td>
                    <a
                      class="btn btn-light btn-sm btn-margin-right disabled"
                      href="/web/student/sessions/result?courseid=CS1231&fsname=Second%20Session"
                      id="view-responses-btn-1"
                      tmrouterlink="/web/student/sessions/result"
                    >
                       View Responses 
                    </a>
                    <a
                      class="btn btn-light btn-sm"
                      href="/web/student/sessions/submission?courseid=CS1231&fsname=Second%20Session"
                      id="view-submit-btn-1"
                      tmrouterlink="/web/student/sessions/submission"
                    >
                       View Submission 
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </tm-loading-retry>
      </div>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-primary text-white"
        >
          <strong
            class="text-break"
          >
            [LSM1306]: Forensic Science
          </strong>
          <div
            class="card-header-btn-toolbar"
          >
            <a
              class="btn btn-primary btn-sm button text-nowrap"
              href="/web/student/course?courseid=LSM1306"
              id="view-team-btn-1"
              tmrouterlink="/web/student/course"
            >
               View team 
            </a>
          </div>
        </div>
        <tm-loading-retry>
          <div
            class="table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
            >
              <thead>
                <tr>
                  <th>
                    Session Name
                  </th>
                  <th>
                    Deadline
                  </th>
                  <th>
                    Submissions
                  </th>
                  <th>
                    Responses
                  </th>
                  <th>
                    Action(s)
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-break"
                  >
                    Third Session
                  </td>
                  <td>
                    <span>
                       Sat, 02 Feb 2019, 04:15 PM +08 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Submitted 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Not Published 
                    </span>
                  </td>
                  <td>
                    <a
                      class="btn btn-light btn-sm btn-margin-right disabled"
                      href="/web/student/sessions/result?courseid=LSM1306&fsname=Third%20Session"
                      id="view-responses-btn-0"
                      tmrouterlink="/web/student/sessions/result"
                    >
                       View Responses 
                    </a>
                    <a
                      class="btn btn-light btn-sm"
                      href="/web/student/sessions/submission?courseid=LSM1306&fsname=Third%20Session"
                      id="edit-submit-btn-0"
                      tmrouterlink="/web/student/sessions/submission"
                    >
                       Edit Submission 
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-break"
                  >
                    Fourth Session
                  </td>
                  <td>
                    <span>
                       Sat, 02 Feb 2019, 04:15 PM +08 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Closed 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Not Published 
                    </span>
                  </td>
                  <td>
                    <a
                      class="btn btn-light btn-sm btn-margin-right disabled"
                      href="/web/student/sessions/result?courseid=LSM1306&fsname=Fourth%20Session"
                      id="view-responses-btn-1"
                      tmrouterlink="/web/student/sessions/result"
                    >
                       View Responses 
                    </a>
                    <a
                      class="btn btn-light btn-sm"
                      href="/web/student/sessions/submission?courseid=LSM1306&fsname=Fourth%20Session"
                      id="view-submit-btn-1"
                      tmrouterlink="/web/student/sessions/submission"
                    >
                       View Submission 
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </tm-loading-retry>
      </div>
    </div>
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with default fields 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading={[Function Boolean]}
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with feedback sessions 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <div />
    <div>
      <div
        class="row mb-2"
      >
        <div
          class="col-12"
        >
          <div
            class="float-end"
          >
            <strong
              class="d-inline"
            >
               Sort By: 
            </strong>
            <div
              class="btn-group"
            >
              <button
                class="btn btn-light"
                id="sort-course-id-btn"
              >
                Course ID
              </button>
              <button
                class="btn btn-light"
                id="sort-course-name-btn"
              >
                Course Name
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-primary text-white"
        >
          <strong
            class="text-break"
          >
            [CS2103]: Software Engineering
          </strong>
          <div
            class="card-header-btn-toolbar"
          >
            <a
              class="btn btn-primary btn-sm button text-nowrap"
              href="/web/student/course?courseid=CS2103"
              id="view-team-btn-0"
              tmrouterlink="/web/student/course"
            >
               View team 
            </a>
          </div>
        </div>
        <tm-loading-retry>
          <div
            class="table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
            >
              <thead>
                <tr>
                  <th>
                    Session Name
                  </th>
                  <th>
                    Deadline
                  </th>
                  <th>
                    Submissions
                  </th>
                  <th>
                    Responses
                  </th>
                  <th>
                    Action(s)
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-break"
                  >
                    First Session
                  </td>
                  <td>
                    <span>
                       Sat, 02 Feb 2019, 04:15 PM +08 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Submitted 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Published 
                    </span>
                  </td>
                  <td>
                    <a
                      class="btn btn-light btn-sm btn-margin-right"
                      href="/web/student/sessions/result?courseid=CS2103&fsname=First%20Session"
                      id="view-responses-btn-0"
                      tmrouterlink="/web/student/sessions/result"
                    >
                       View Responses 
                    </a>
                    <a
                      class="btn btn-light btn-sm"
                      href="/web/student/sessions/submission?courseid=CS2103&fsname=First%20Session"
                      id="edit-submit-btn-0"
                      tmrouterlink="/web/student/sessions/submission"
                    >
                       Edit Submission 
                    </a>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-break"
                  >
                    Second Session
                  </td>
                  <td>
                    <span>
                       Sat, 02 Feb 2019, 04:15 PM +08 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Pending 
                    </span>
                  </td>
                  <td>
                    <span
                      class="ngb-tooltip-class"
                    >
                       Not Published 
                    </span>
                  </td>
                  <td>
                    <a
                      class="btn btn-light btn-sm btn-margin-right disabled"
                      href="/web/student/sessions/result?courseid=CS2103&fsname=Second%20Session"
                      id="view-responses-btn-1"
                      tmrouterlink="/web/student/sessions/result"
                    >
                       View Responses 
                    </a>
                    <a
                      class="btn btn-light btn-sm"
                      href="/web/student/sessions/submission?courseid=CS2103&fsname=Second%20Session"
                      id="start-submit-btn-1"
                      tmrouterlink="/web/student/sessions/submission"
                    >
                       Start Submission 
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </tm-loading-retry>
      </div>
    </div>
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with no course 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <div />
    <div>
      <div>
         You are not enrolled in any courses. Please refer to the 
        <a
          href="/web/student/help"
          tmrouterlink="/web/student/help"
        >
          help page
        </a>
         if you need more information. 
      </div>
    </div>
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with no feedback session over 2 courses 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <div />
    <div>
      <div
        class="row mb-2"
      >
        <div
          class="col-12"
        >
          <div
            class="float-end"
          >
            <strong
              class="d-inline"
            >
               Sort By: 
            </strong>
            <div
              class="btn-group"
            >
              <button
                class="btn btn-light"
                id="sort-course-id-btn"
              >
                Course ID
              </button>
              <button
                class="btn btn-light"
                id="sort-course-name-btn"
              >
                Course Name
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-primary text-white"
        >
          <strong
            class="text-break"
          >
            [CS3281]: Thematic Systems I
          </strong>
          <div
            class="card-header-btn-toolbar"
          >
            <a
              class="btn btn-primary btn-sm button text-nowrap"
              href="/web/student/course?courseid=CS3281"
              id="view-team-btn-0"
              tmrouterlink="/web/student/course"
            >
               View team 
            </a>
          </div>
        </div>
        <tm-loading-retry>
          <div
            class="table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
            >
              <tbody>
                <tr>
                  <th
                    class="align-center white"
                  >
                     Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
                  </th>
                </tr>
              </tbody>
            </table>
          </div>
        </tm-loading-retry>
      </div>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-primary text-white"
        >
          <strong
            class="text-break"
          >
            [CS3282]: Thematic Systems II
          </strong>
          <div
            class="card-header-btn-toolbar"
          >
            <a
              class="btn btn-primary btn-sm button text-nowrap"
              href="/web/student/course?courseid=CS3282"
              id="view-team-btn-1"
              tmrouterlink="/web/student/course"
            >
               View team 
            </a>
          </div>
        </div>
        <tm-loading-retry>
          <div
            class="table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
            >
              <tbody>
                <tr>
                  <th
                    class="align-center white"
                  >
                     Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
                  </th>
                </tr>
              </tbody>
            </table>
          </div>
        </tm-loading-retry>
      </div>
    </div>
  </tm-loading-retry>
</tm-student-home-page>
`;

exports[`StudentHomePageComponent should snap with no feedback sessions 1`] = `
<tm-student-home-page
  SortBy={[Function Object]}
  __ngContext__={[Function Number]}
  allStudentFeedbackSessionsNotReturned={[Function String]}
  courseService={[Function CourseService]}
  courses={[Function Array]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  formatDateDetailPipe={[Function FormatDateDetailPipe]}
  hasCoursesLoadingFailed="false"
  isCoursesLoading="false"
  route={[Function ActivatedRoute]}
  sessionSubmissionStatusPipe={[Function SubmissionStatusPipe]}
  sortBy="0"
  statusMessageService={[Function StatusMessageService]}
  studentFeedbackSessionStatusAwaiting={[Function String]}
  studentFeedbackSessionStatusClosed={[Function String]}
  studentFeedbackSessionStatusExtension={[Function String]}
  studentFeedbackSessionStatusNotPublished={[Function String]}
  studentFeedbackSessionStatusPending={[Function String]}
  studentFeedbackSessionStatusPublished={[Function String]}
  studentFeedbackSessionStatusSubmitted={[Function String]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
>
  <tm-loading-retry>
    <div />
    <div>
      <div
        class="row mb-2"
      >
        <div
          class="col-12"
        >
          <div
            class="float-end"
          >
            <strong
              class="d-inline"
            >
               Sort By: 
            </strong>
            <div
              class="btn-group"
            >
              <button
                class="btn btn-light"
                id="sort-course-id-btn"
              >
                Course ID
              </button>
              <button
                class="btn btn-light"
                id="sort-course-name-btn"
              >
                Course Name
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-primary text-white"
        >
          <strong
            class="text-break"
          >
            [CS3281]: Thematic Systems
          </strong>
          <div
            class="card-header-btn-toolbar"
          >
            <a
              class="btn btn-primary btn-sm button text-nowrap"
              href="/web/student/course?courseid=CS3281"
              id="view-team-btn-0"
              tmrouterlink="/web/student/course"
            >
               View team 
            </a>
          </div>
        </div>
        <tm-loading-retry>
          <div
            class="table-responsive"
          >
            <table
              class="table table-striped table-bordered margin-0"
            >
              <tbody>
                <tr>
                  <th
                    class="align-center white"
                  >
                     Currently, there are no open evaluation/feedback sessions in this course. When a session is open for submission you will be notified. 
                  </th>
                </tr>
              </tbody>
            </table>
          </div>
        </tm-loading-retry>
      </div>
    </div>
  </tm-loading-retry>
</tm-student-home-page>
`;
